--- a/sha1passApp/src/main/res/layout/activity_main.xml
+++ b/sha1passApp/src/main/res/layout/activity_main.xml
@@ -1,31 +1,38 @@
-<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
+<!-- This DrawerLayout has two children at the root  -->
 <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		android:id="@+id/drawer_layout"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
 
-    <!-- As the main content view, the view below consumes the entire
-         space available using match_parent in both dimensions. -->
-    <FrameLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+	<!-- This LinearLayout represents the contents of the screen  -->
+	<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:orientation="vertical">
 
-    <!-- android:layout_gravity="start" tells DrawerLayout to treat
-         this as a sliding drawer on the left side for left-to-right
-         languages and on the right side for right-to-left languages.
-         If you're not building against API 17 or higher, use
-         android:layout_gravity="left" instead. -->
-    <!-- The drawer is given a fixed width in dp and extends the full height of
-         the container. -->
-    <fragment android:id="@+id/navigation_drawer"
-              android:layout_width="@dimen/navigation_drawer_width"
-              android:layout_height="match_parent"
-              android:layout_gravity="start"
-              android:name="com.rkarp.sha1pass.android.NavigationDrawerFragment"
-              tools:layout="@layout/fragment_navigation_drawer"/>
+		<!-- The ActionBar displayed at the top -->
+		<include
+				layout="@layout/toolbar"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content" />
 
+		<!-- The main content view where fragments are loaded -->
+		<FrameLayout
+				android:id="@+id/flContent"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent" />
+	</LinearLayout>
+
+	<!-- The navigation drawer that comes from the left -->
+	<!-- Note that `android:layout_gravity` needs to be set to 'start' -->
+	<android.support.design.widget.NavigationView
+			android:id="@+id/nvView"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:layout_gravity="start"
+			android:background="@android:color/white"
+			app:headerLayout="@layout/nav_header"
+			app:menu="@menu/navigation_drawer_items" />
 </android.support.v4.widget.DrawerLayout>
