--- a/sha1passApp/src/main/res/values/styles.xml
+++ b/sha1passApp/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">#673AB7</item>
-        <item name="colorPrimaryDark">#512DA8</item>
-        <item name="colorAccent">#FF4081</item>
+        <item name="colorPrimary">#112FF8</item>
+        <item name="colorPrimaryDark">#111AB7</item>
+        <item name="colorAccent">#11BFF8</item>
     </style>
 </resources>
