--- a/sha1passApp/src/main/res/layout/fragment_about.xml
+++ b/sha1passApp/src/main/res/layout/fragment_about.xml
@@ -9,17 +9,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Test..."
-            android:id="@+id/textView2" android:layout_gravity="center_horizontal"/>
+            android:text="@string/app_name"
+            android:id="@+id/textView1" android:layout_gravity="center_horizontal" android:textSize="26dp"/>
 
-    <android.support.v7.widget.AppCompatButton
-            android:text="B64 Half"
-            android:id="@+id/b64HalfBtn"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_columnSpan="1"
-            android:background="#A00" android:clickable="true"
-            android:gravity="center_vertical|center_horizontal"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/textView2" android:layout_gravity="center_horizontal" android:textSize="22dp"/>
+
+    <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/description"
+            android:id="@+id/textView3" android:paddingTop="30dp"/>
 </LinearLayout>
