--- a/sha1passApp/src/main/res/layout/nav_header.xml
+++ b/sha1passApp/src/main/res/layout/nav_header.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="192dp"
+              android:layout_height="92dp"
               android:background="?attr/colorPrimaryDark"
               android:padding="16dp"
               android:theme="@style/ThemeOverlay.AppCompat.Dark"
@@ -10,8 +10,7 @@
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Header"
+            android:text="@string/navHeader"
             android:textColor="@android:color/white"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
-
 </LinearLayout>
