--- a/sha1passApp/src/main/res/values/colors.xml
+++ b/sha1passApp/src/main/res/values/colors.xml
@@ -3,12 +3,12 @@
   	<color name="window_background">#CC000000</color>
 	<color name="my_primary">#ED1C24</color>
   	<color name="my_primary_dark">#CC0000</color>
-  	<color name="my_primary_light">#B3E5FC</color>
+  	<color name="my_primary_light">#3F3F3F</color>
   	<color name="my_accent">#ED1C24</color>
-  	<color name="my_primary_text">#ffffff</color>
-  	<color name="my_secondary_text">#ffffff</color>
-  	<color name="my_icons">#FFFFFF</color>
-  	<color name="my_divider">#B6B6B6</color>
+  	<color name="my_primary_text">#3F3F3F</color>
+  	<color name="my_secondary_text">#3F3F3F</color>
+  	<color name="my_icons">#3F3F3F</color>
+  	<color name="my_divider">#3F3F3F</color>
 	<color name="my_background_selected">#AA0BB6</color>
 
 </resources>
