--- a/Website/WebsiteFrontend/src/app/dashboard/dashboard.component.html
+++ b/Website/WebsiteFrontend/src/app/dashboard/dashboard.component.html
@@ -16,22 +16,260 @@
 
   <section id="content1" class="background-alt">
 
+    <div id="projects">
+                    <div class="container">
+                        <div class="row">
+                            <div class="project shadow-large">
+                                <div class="project-image">
+                                    <img src="assets/images/LordsandKnights-Logo.jpg" width="300" />
+                                </div>
+                                <!-- End .project-image -->
+                                <div class="project-info">
+                                    <h3>Lords & Knights</h3>
+                                    <p>
+                                        Lords & Knights is a medieval strategy MMO game available for Browser, iOS and Android. <br>Play with thousands of other lords, create massive armies and conquer hundreds of new castles. There is no limit in this game!
+                                    </p>
+                                    <a href="projects/professional/lordsandknights.html" class="btn btn-primary">Show more</a>
+                                </div>
+                                <!-- End .project-info -->
+                            </div>
+                            <!-- End .project -->
+            
+                            <div class="project shadow-large">
+                                <div class="project-image">
+                                    <img src="assets/images/BigFarm-Logo.jpg" width="300" />
+                                </div>
+                                <!-- End .project-image -->
+                                <div class="project-info">
+                                    <h3>Goodgame BigFarm</h3>
+                                    <p>
+                                        Live an exciting life in the country with your own farm in Goodgame Big Farm! <br>You’re in charge of planting and harvesting your fields and, of course, raising your own pigs and cows! <br>You’ll also have to prove your business skills by selling your goods on the market. With your profits, you can keep upgrading and expanding your farm until you become the greatest farmer far and wide!
+                                    </p>
+                                    <a href="projects/professional/bigfarm.html" class="btn btn-primary">Show more</a>
+                                </div>
+                                <!-- End .project-info -->
+                            </div>
+                            <!-- End .project -->
+                        </div>
+                    </div>
+                </div>
 
   </section>
 
   <section id="content2" class="background-alt">
 
+    <div id="experience">
+      <h2 class="heading">Android</h2>
+
+      <div class="row">
+          <div class="column">
+
+              <div class="project shadow-large">
+                  <img src="assets/images/android-logo.png" height="250" width="300" />
+                  <div class="project-info">
+                      <h3>Coming soon</h3>
+                  </div>
+              </div>
+
+          </div>
+          <div class="column">
+              <div class="project shadow-large">
+                  <img src="assets/images/android-logo.png" height="250" width="300" />
+                  <div class="project-info">
+                      <h3>Coming soon</h3>
+                  </div>
+              </div>
+          </div>
+
+      </div>
+  </div>
 
   </section>
+  
 
-  <section id="content3" class="background-alt">
 
+    <section id="content3" class="background-alt">
 
-  </section>
+        <div id="content">
+            <h1>Timeline</h1>
+        </div>
+
+        <div id="experience">
+            <h2 class="heading">Experience</h2>
+            <div id="experience-timeline">
+                <div data-date="December 2018 – NOW">
+                    <h3>Gameforge</h3>
+                    <h4>DevOps Engineer</h4>
+                </div>
+
+                <div data-date="August 2018 – November 2018">
+                    <h3>HanseMerkur Insurance Group</h3>
+                    <h4>Software Development Engineer</h4>
+                    <p>
+                        My responsibilities while working for HanseMerkur are:
+                    </p>
+                    <ul>
+                        <li>
+                            Creating Java/AngularJS Enterprise applications
+                        </li>
+                        <li>
+                            Developing features for a REST/JMS based microservice architecture
+                        </li>
+                        <li>
+                            Profiling and optimizing backend/frontend performance
+                        </li>
+                    </ul>
+                </div>
+
+                <div data-date="February 2016 – July 2018">
+                    <h3>XYRALITY GmbH</h3>
+                    <h4>Software Engineering Trainee</h4>
+                    <p>
+                        When I worked for Xyrality I mainly worked on the following:
+                    </p>
+                    <ul>
+                        <li>
+                            Developing automated tests for Android, iOS and Browser
+                        </li>
+                        <li>
+                            Creating and maintaining Jenkins build scripts
+                        </li>
+                        <li>
+                            Maintaining Jenkins slave machines for continuous integration
+                        </li>
+                        <li>
+                            Leading the test automation project which includes:
+                            <ul>
+                                <li>Evaluating and prioritizing software requirements</li>
+                                <li>Creating and assigning tasks to individual developers</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Designing and implementing a Spring/Hibernate based webapplication using Java/Kotlin and the Vaadin Framework
+                        </li>
+                    </ul>
+                </div>
+
+                <div data-date="October 2013 – February 2015">
+                    <h3>Goodgame Studios</h3>
+                    <h4>Quality Assurance Engineer</h4>
+                    <p>
+                        During my time at Goodgame Studios I worked on the following:
+                    </p>
+                    <ul>
+                        <li>
+                            Testing alpha versions of games and company-internal systems
+                        </li>
+                        <li>
+                            Creating and verifying bug reports
+                        </li>
+                        <li>
+                            Maintaining the Atlassian Jira bug database
+                        </li>
+                        <li>
+                            Analysing test processes and developing process improvements
+                        </li>
+                        <li>
+                            Supervising a team of up to 30 testers
+                        </li>
+                        <li>
+                            Providing feedback in regards to game design and gameplay
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+        <!-- End #experience -->
+
+        <div id="education">
+            <h2 class="heading">Education</h2>
+            <div class="education-block">
+                <h3>University of Hamburg</h3>
+                <span class="education-date">August 2015 - February 2016</span>
+                <h4>Computer Science</h4>
+                <p>
+                    Attended computer science classes for one semester
+                </p>
+            </div>
+            <!-- End .education-block -->
+
+            <div class="education-block">
+                <h3>Berufliche Schule Elmshorn</h3>
+                <span class="education-date">August 2011 - June 2012</span>
+                <h4>Berufsoberschule (Field of studies - Economics)</h4>
+                <p>
+                    General qualification for university entrance
+                </p>
+            </div>
+            <!-- End .education-block -->
+
+            <div class="education-block">
+                <h3>Berufliche Schule Elmshorn</h3>
+                <span class="education-date">August 2009 - June 2011</span>
+                <h4>Berufsfachschule (Field of studies - Foreign languages)</h4>
+                <p>
+                    University of applied sciences entrance qualification
+                </p>
+            </div>
+            <!-- End .education-block -->
+
+        </div>
+        <!-- End #education -->
+
+        <div id="education">
+            <h2 class="heading">Curriculum vitae</h2>
+            <div class="education-block">
+                <p>
+                    For a full overview you can also take a look at my <a href="files/CV.pdf" target="_blank">curriculum vitae</a>
+                </p>
+            </div>
+            <!-- End .education-block -->
+
+            <div id="skills">
+                <h2 class="heading">Skills</h2>
+                <ul>
+                    <li>Java</li>
+                    <li>Kotlin</li>
+                    <li>Android</li>
+                    <li>Git</li>
+                    <li>PostgreSQL</li>
+                    <li>Docker</li>
+                    <li>DevOps</li>
+                    <li>Kubernetes</li>
+                    <li>Ansible</li>
+                    <li>IntelliJ IDEA</li>
+                    <li>Android Studio</li>
+                </ul>
+            </div>
+            <!-- End #skills -->
+
+        </div>
+        <!-- End #education -->
+
+    </section>
 
   <section id="content4" class="background-alt">
 
 
+    <div id="education">
+        <div class="education-block">
+            <h3>Contact information</h3><br><br>
+
+            <table>
+                <tr>
+                    <td>Name</td>
+                    <td>Rickie Karp</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>E-Mail</td>
+                    <td><input class="inputCopy" type="text" value="contact@rickiekarp.net" id="myInput" readonly></td>
+                    <td><button class="btn btn-primary" onclick="copy()"><i class="fa fa-clipboard" aria-hidden="true"></i></button></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 
   </section>
 
