Update timeline style

--- a/Website/WebsiteFrontend/src/app/dashboard/dashboard.component.html
+++ b/Website/WebsiteFrontend/src/app/dashboard/dashboard.component.html
@@ -91,18 +91,14 @@
     <section id="content3" class="background-alt">
 
         <div id="content">
-            <h1>Timeline</h1>
-        </div>
+            <h1>Experience</h1>
 
-        <div id="experience">
-            <h2 class="heading">Experience</h2>
-            <div id="experience-timeline">
-                <div data-date="December 2018 – NOW">
+            <ul class="timeline">
+                <li class="event" data-date="December 2018 – NOW">
                     <h3>Gameforge</h3>
                     <h4>DevOps Engineer</h4>
-                </div>
-
-                <div data-date="August 2018 – November 2018">
+                </li>
+                <li class="event" data-date="August 2018 – November 2018">
                     <h3>HanseMerkur Insurance Group</h3>
                     <h4>Software Development Engineer</h4>
                     <p>
@@ -119,17 +115,17 @@
                             Profiling and optimizing backend/frontend performance
                         </li>
                     </ul>
-                </div>
-
-                <div data-date="February 2016 – July 2018">
+                </li>
+                <li class="event" data-date="February 2016 – July 2018">
                     <h3>XYRALITY GmbH</h3>
                     <h4>Software Engineering Trainee</h4>
+
                     <p>
                         When I worked for Xyrality I mainly worked on the following:
                     </p>
                     <ul>
                         <li>
-                            Developing automated tests for Android, iOS and Browser
+                            Developing automated tests for Android, iOS and Browser game clients
                         </li>
                         <li>
                             Creating and maintaining Jenkins build scripts
@@ -148,11 +144,11 @@
                             Designing and implementing a Spring/Hibernate based webapplication using Java/Kotlin and the Vaadin Framework
                         </li>
                     </ul>
-                </div>
-
-                <div data-date="October 2013 – February 2015">
+                </li>
+                <li class="event" data-date="October 2013 – February 2015">
                     <h3>Goodgame Studios</h3>
                     <h4>Quality Assurance Engineer</h4>
+
                     <p>
                         During my time at Goodgame Studios I worked on the following:
                     </p>
@@ -176,9 +172,8 @@
                             Providing feedback in regards to game design and gameplay
                         </li>
                     </ul>
-                </div>
-
-            </div>
+                </li>
+            </ul>
         </div>
         <!-- End #experience -->
 
