--- a/Website/WebsiteFrontend/src/style.less
+++ b/Website/WebsiteFrontend/src/style.less
@@ -11,7 +11,7 @@
 @spacing: 50px;
 @radius: 4px;
 
-@date: 120px;
+@date: 300px;
 @dotborder: 4px;
 @dot: 11px;
 @line: 4px;
@@ -100,7 +100,7 @@ h1 {
     }
 
     &:before {
-      left: ((@date + @spacing + @line + @dot + (@dotborder * 2)) * 1.5) * -1;
+      left: (@date + @spacing + @line + @dot + 10) * -1;
       color: fade(@color-light, 90%);
       content: attr(data-date);
       text-align: right;
