--- a/Website/WebsiteFrontend/src/app/projects/projects.component.html
+++ b/Website/WebsiteFrontend/src/app/projects/projects.component.html
@@ -9,42 +9,24 @@
 
             <div class="centerDiv">
                 <div class="card-image-left">
-                    <img class="card-img-top" src="../../assets/images/BigFarm-Logo.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="../../assets/{{project.projectImage}}" alt="Card image cap">
                 </div>
                 <div class="card-content-right">
-                    <h5 class="card-title">Goodgame BigFarm</h5>
-                    <p class="card-text">Live an exciting life in the country with your own farm in Goodgame Big Farm! You’re in charge of planting and harvesting your fields and, of course, raising your own pigs and cows! You’ll also have to prove your business skills by selling your goods on the market. With your profits, you can keep upgrading and expanding your farm until you become the greatest farmer far and wide!</p>
-                    <a href="https://bigfarm.goodgamestudios.com" class="btn btn-primary" target="_blank">Visit</a>
+                    <h5 class="card-title">{{ project.name }}</h5>
+                    <p class="card-text">{{ project.description }}</p>
+                    <a href="{{project.projectUrl}}" class="btn btn-primary" target="_blank">Visit</a>
                 </div>
             </div>
             <!-- End .project -->
 
             <div id="education">
                 <div class="education-block">
-                    <span class="education-date">October 2013 - February 2015</span>
-                    <h3>Goodgame Studios</h3><br><br>
-                        When I worked at Goodgame Studios I mainly worked on the BigFarm browser game.
-                        <br>This is a farming simulator where players build up farms and produce/sell products.<br>
-                        <br>I was responsible for assuring the quality by testing the game, reporting bugs and helping my colleagues with questions in regards to software quality.
-                        <br><br>Additionally to that I was also doing the following:
+                    <span class="education-date">{{ project.projectDuration}}</span>
+                    <h3>{{ project.company }}</h3><br><br>
+                        {{ project.text }}
                         <ul style="margin-left: 20px;">
-                            <li>
-                                Maintaining the bug database
-                            </li>
-                            <li>
-                                Creating and improving test plans
-                            </li>
-                            <li>
-                                Ensuring optimal communication between QA and Development
-                            </li>
-                            <li>
-                                Giving feedback in regards to game design
-                            </li>
-                            <li>
-                                Writing test reports
-                            </li>
-                            <li>
-                                Creating and analysing test statistics
+                            <li *ngFor="let task of project.tasks">
+                                {{ task }}
                             </li>
                         </ul>
                 </div>
@@ -56,5 +38,5 @@
 
         </div>
 
-        <iframe width="900" height="526" src="https://www.youtube.com/embed/nUok2W5FWiQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="900" height="526" [src]="project.trailerUrl | safe" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
