--- a/Website/WebsiteFrontend/src/app/projects/projects.component.html
+++ b/Website/WebsiteFrontend/src/app/projects/projects.component.html
@@ -9,7 +9,7 @@
 
             <div class="centerDiv">
                 <div class="card-image-left">
-                    <img class="card-img-top" src="../../assets/{{project.projectImage}}" alt="Card image cap">
+                    <img class="card-img-top" src="assets/{{project.projectImage}}" alt="image">
                 </div>
                 <div class="card-content-right">
                     <h5 class="card-title">{{ project.name }}</h5>
