Clean up styles

--- a/Website/WebsiteFrontend/src/app/dashboard/dashboard.component.html
+++ b/Website/WebsiteFrontend/src/app/dashboard/dashboard.component.html
@@ -91,7 +91,7 @@
     <section id="content3" class="background-alt">
 
         <div id="content">
-            <h1>Experience</h1>
+            <h2 class="heading">Experience</h2>
 
             <ul class="timeline">
                 <li class="event" data-date="December 2018 – NOW">
