--- a/Website/WebsiteFrontend/src/app/projects/projects.component.html
+++ b/Website/WebsiteFrontend/src/app/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row-back">
-        <a class="btn btn-primary" [routerLink]="['/dashboard']">Back</a>
+        <a class="btn btn-primary" [routerLink]="['/home']">Back</a>
     </div>
 </div>
 
