--- a/Website/WebsiteFrontend/src/app/home/home.component.html
+++ b/Website/WebsiteFrontend/src/app/home/home.component.html
@@ -1,91 +1,91 @@
 <h1>Rickie Karp</h1>
 
 <div class="section-wrap section-flavors">
-  <input id="tab1" type="radio" name="tabs" checked>
-  <label for="tab1">Professional</label>
+    <input id="tab1" type="radio" name="tabs" checked>
+    <label for="tab1">Professional</label>
 
 
-  <input id="tab2" type="radio" name="tabs">
-  <label for="tab2">Personal</label>
+    <input id="tab2" type="radio" name="tabs">
+    <label for="tab2">Personal</label>
 
-  <input id="tab3" type="radio" name="tabs">
-  <label for="tab3">Résumé</label>
+    <input id="tab3" type="radio" name="tabs">
+    <label for="tab3">Résumé</label>
 
-  <input id="tab4" type="radio" name="tabs">
-  <label for="tab4">Contact</label>
+    <input id="tab4" type="radio" name="tabs">
+    <label for="tab4">Contact</label>
 
-  <section id="content1" class="background-alt">
+    <section id="content1" class="background-alt">
 
-    <div id="projects">
-                    <div class="container">
-                        <div class="row">
-                            <div class="project shadow-large">
-                                <div class="project-image">
-                                    <img src="assets/images/LordsandKnights-Logo.jpg" width="300" />
-                                </div>
-                                <!-- End .project-image -->
-                                <div class="project-info">
-                                    <h3>Lords & Knights</h3>
-                                    <p>
-                                        Lords & Knights is a medieval strategy MMO game available for Browser, iOS and Android. <br>Play with thousands of other lords, create massive armies and conquer hundreds of new castles. There is no limit in this game!
-                                    </p>
-                                    <a class="btn btn-primary" [routerLink]="['/projects', 'lordsandknights']">Show more</a>
-                                </div>
-                                <!-- End .project-info -->
-                            </div>
-                            <!-- End .project -->
-            
-                            <div class="project shadow-large">
-                                <div class="project-image">
-                                    <img src="assets/images/BigFarm-Logo.jpg" width="300" />
-                                </div>
-                                <!-- End .project-image -->
-                                <div class="project-info">
-                                    <h3>Goodgame BigFarm</h3>
-                                    <p>
-                                        Live an exciting life in the country with your own farm in Goodgame Big Farm! <br>You’re in charge of planting and harvesting your fields and, of course, raising your own pigs and cows! <br>You’ll also have to prove your business skills by selling your goods on the market. With your profits, you can keep upgrading and expanding your farm until you become the greatest farmer far and wide!
-                                    </p>
-                                    <a class="btn btn-primary" [routerLink]="['/projects', 'bigfarm']">Show more</a>
-                                </div>
-                                <!-- End .project-info -->
-                            </div>
-                            <!-- End .project -->
+        <div id="projects">
+            <div class="container">
+                <div class="row">
+                    <div class="project shadow-large">
+                        <div class="project-image">
+                            <img src="assets/images/LordsandKnights-Logo.jpg" width="300" />
+                        </div>
+                        <!-- End .project-image -->
+                        <div class="project-info">
+                            <h3>Lords & Knights</h3>
+                            <p>
+                                Lords & Knights is a medieval strategy MMO game available for Browser, iOS and Android. <br>Play with thousands of other lords, create massive armies and conquer hundreds of new castles. There is no limit in this game!
+                            </p>
+                            <a class="btn btn-primary" [routerLink]="['/projects', 'lordsandknights']">Show more</a>
+                        </div>
+                        <!-- End .project-info -->
+                    </div>
+                    <!-- End .project -->
+
+                    <div class="project shadow-large">
+                        <div class="project-image">
+                            <img src="assets/images/BigFarm-Logo.jpg" width="300" />
+                        </div>
+                        <!-- End .project-image -->
+                        <div class="project-info">
+                            <h3>Goodgame BigFarm</h3>
+                            <p>
+                                Live an exciting life in the country with your own farm in Goodgame Big Farm! <br>You’re in charge of planting and harvesting your fields and, of course, raising your own pigs and cows! <br>You’ll also have to prove your business skills by selling your goods on the market. With your profits, you can keep upgrading and expanding your farm until you become the greatest farmer far and wide!
+                            </p>
+                            <a class="btn btn-primary" [routerLink]="['/projects', 'bigfarm']">Show more</a>
+                        </div>
+                        <!-- End .project-info -->
+                    </div>
+                    <!-- End .project -->
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="content2" class="background-alt">
+
+        <div id="experience">
+            <h2 class="heading">Android</h2>
+
+            <div class="row">
+                <div class="column">
+
+                    <div class="project shadow-large">
+                        <img src="assets/images/android-logo.png" height="250" width="300" />
+                        <div class="project-info">
+                            <h3>Work in progress</h3>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="column">
+                    <div class="project shadow-large">
+                        <img src="assets/images/android-logo.png" height="250" width="300" />
+                        <div class="project-info">
+                            <h3>Work in progress</h3>
                         </div>
                     </div>
                 </div>
 
-  </section>
+            </div>
+        </div>
 
-  <section id="content2" class="background-alt">
+    </section>
 
-    <div id="experience">
-      <h2 class="heading">Android</h2>
-
-      <div class="row">
-          <div class="column">
-
-              <div class="project shadow-large">
-                  <img src="assets/images/android-logo.png" height="250" width="300" />
-                  <div class="project-info">
-                      <h3>Coming soon</h3>
-                  </div>
-              </div>
-
-          </div>
-          <div class="column">
-              <div class="project shadow-large">
-                  <img src="assets/images/android-logo.png" height="250" width="300" />
-                  <div class="project-info">
-                      <h3>Coming soon</h3>
-                  </div>
-              </div>
-          </div>
-
-      </div>
-  </div>
-
-  </section>
-  
 
 
     <section id="content3" class="background-alt">
@@ -102,7 +102,7 @@
                     <h3>HanseMerkur Insurance Group</h3>
                     <h4>Software Development Engineer</h4>
                     <p>
-                        My responsibilities while working for HanseMerkur are:
+                        My responsibilities while working for HanseMerkur:
                     </p>
                     <ul>
                         <li>
@@ -121,7 +121,7 @@
                     <h4>Software Engineering Trainee</h4>
 
                     <p>
-                        When I worked for Xyrality I mainly worked on the following:
+                        At Xyrality I worked on:
                     </p>
                     <ul>
                         <li>
@@ -150,7 +150,7 @@
                     <h4>Quality Assurance Engineer</h4>
 
                     <p>
-                        During my time at Goodgame Studios I worked on the following:
+                        During my time at Goodgame Studios I was responsible for:
                     </p>
                     <ul>
                         <li>
@@ -226,6 +226,7 @@
                     <li>DevOps</li>
                     <li>Kubernetes</li>
                     <li>Ansible</li>
+                    <li>Shell Scripting</li>
                     <li>IntelliJ IDEA</li>
                     <li>Android Studio</li>
                 </ul>
@@ -237,28 +238,30 @@
 
     </section>
 
-  <section id="content4" class="background-alt">
+    <section id="content4" class="background-alt">
 
+        <div id="education">
+            <div class="education-block">
+                <h3>Contact information</h3><br><br>
 
-    <div id="education">
-        <div class="education-block">
-            <h3>Contact information</h3><br><br>
+                <table>
+                    <tr>
+                        <td>Name</td>
+                        <td>Rickie Karp</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>E-Mail</td>
+                        <td><input class="inputCopy" type="text" value="contact@rickiekarp.net" id="myInput" readonly></td>
+                        <td><button class="btn btn-primary" onclick="copy()"><i class="fa fa-clipboard" aria-hidden="true"></i></button></td>
+                    </tr>
+                </table>
 
-            <table>
-                <tr>
-                    <td>Name</td>
-                    <td>Rickie Karp</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>E-Mail</td>
-                    <td><input class="inputCopy" type="text" value="contact@rickiekarp.net" id="myInput" readonly></td>
-                    <td><button class="btn btn-primary" onclick="copy()"><i class="fa fa-clipboard" aria-hidden="true"></i></button></td>
-                </tr>
-            </table>
+                <br><br><p align="center">If you would like to meet me in person or have any other questions, feel free to contact me!</p><br>
+
+            </div>
         </div>
-    </div>
 
-  </section>
+    </section>
 
 </div>
