Website: Navigation reworked

--- a/Website/WebsiteFrontend/src/style.less
+++ b/Website/WebsiteFrontend/src/style.less
@@ -3,7 +3,7 @@
 
 /* Variables */
 
-@background: #1a1c1f;
+@background: #111111;
 
 @color-primary: #004ffc;
 @color-light: white;
@@ -33,6 +33,7 @@ strong {
 #content {
   margin-top: @spacing;
   text-align: center;
+  background: #111111;
 }
 
 /* Timeline */
