--- a/Website/WebsiteFrontend/src/app/app.component.html
+++ b/Website/WebsiteFrontend/src/app/app.component.html
@@ -1,1 +1,13 @@
+<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+    <div class="container">
+        <a class="navbar-brand">Rickie Karp</a>
+        <ul class="nav navbar-nav" routerLinkActive="active">
+            <li class="nav-item"><a class="nav-link" routerLink="professional"><label>Professional</label></a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="personal"><label>Personal</label></a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="about"><label>Résumé</label></a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="contact"><label>Contact</label></a></li>
+        </ul>
+    </div>
+</nav>
+
 <router-outlet></router-outlet>
