--- a/Website/WebsiteFrontend/src/app/components/projects/projects.component.html
+++ b/Website/WebsiteFrontend/src/app/components/projects/projects.component.html
@@ -1,9 +1,3 @@
-<div class="container">
-    <div class="row-back">
-        <a class="btn btn-primary" [routerLink]="['/home']">Back</a>
-    </div>
-</div>
-
 <div id="projects" class="background-alt">
         <div class="row">
 
@@ -39,4 +33,10 @@
         </div>
 
         <iframe width="900" height="526" [src]="project.trailerUrl | safe" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+
+<div class="container">
+    <div class="row-back">
+        <a class="btn btn-primary" [routerLink]="['/professional']">Back</a>
+    </div>
 </div>
