--- a/Website/WebsiteFrontend/src/app/components/contact/contact.component.html
+++ b/Website/WebsiteFrontend/src/app/components/contact/contact.component.html
@@ -5,12 +5,12 @@
         <table>
             <tr>
                 <td>Name</td>
-                <td>Rickie Karp</td>
+                <td>{{contactInfo.name}}</td>
                 <td></td>
             </tr>
             <tr>
                 <td>E-Mail</td>
-                <td><input class="inputCopy" type="text" value="contact@rickiekarp.net" id="myInput" readonly></td>
+                <td><input class="inputCopy" type="text" value={{contactInfo.email}} id="myInput" readonly></td>
                 <td><button class="btn btn-primary" onclick="copy()"><i class="fa fa-clipboard" aria-hidden="true"></i></button></td>
             </tr>
         </table>
