--- a/Website/WebsiteFrontend/src/app/components/about/about.component.html
+++ b/Website/WebsiteFrontend/src/app/components/about/about.component.html
@@ -1,83 +1,14 @@
-<div id="content">
+<div id="content" *ngIf="experienceInfo.length > 0">
     <h2 class="heading">Experience</h2>
 
     <ul class="timeline">
-        <li class="event" data-date="December 2018 – NOW">
-            <h3>Gameforge</h3>
-            <h4>DevOps Engineer</h4>
-        </li>
-        <li class="event" data-date="August 2018 – November 2018">
-            <h3>HanseMerkur Insurance Group</h3>
-            <h4>Software Development Engineer</h4>
-            <p>
-                My responsibilities while working for HanseMerkur:
-            </p>
+        <li class="event" *ngFor="let exp of experienceInfo" data-date="December 2018 – NOW">
+            <h3>{{exp.name}}</h3>
+            <h4>{{exp.jobTitle}}</h4>
+            <p>asd {{exp.description.description}}</p>
             <ul>
-                <li>
-                    Creating Java/AngularJS Enterprise applications
-                </li>
-                <li>
-                    Developing features for a REST/JMS based microservice architecture
-                </li>
-                <li>
-                    Profiling and optimizing backend/frontend performance
-                </li>
-            </ul>
-        </li>
-        <li class="event" data-date="February 2016 – July 2018">
-            <h3>XYRALITY GmbH</h3>
-            <h4>Software Engineering Trainee</h4>
-
-            <p>
-                At Xyrality I worked on:
-            </p>
-            <ul>
-                <li>
-                    Developing automated tests for Android, iOS and Browser game clients
-                </li>
-                <li>
-                    Creating and maintaining Jenkins build scripts
-                </li>
-                <li>
-                    Maintaining Jenkins slave machines for continuous integration
-                </li>
-                <li>
-                    Leading the test automation project which includes:
-                    <ul>
-                        <li>Evaluating and prioritizing software requirements</li>
-                        <li>Creating and assigning tasks to individual developers</li>
-                    </ul>
-                </li>
-                <li>
-                    Designing and implementing a Spring/Hibernate based webapplication using Java/Kotlin and the Vaadin Framework
-                </li>
-            </ul>
-        </li>
-        <li class="event" data-date="October 2013 – February 2015">
-            <h3>Goodgame Studios</h3>
-            <h4>Quality Assurance Engineer</h4>
-
-            <p>
-                During my time at Goodgame Studios I was responsible for:
-            </p>
-            <ul>
-                <li>
-                    Testing alpha versions of games and company-internal systems
-                </li>
-                <li>
-                    Creating and verifying bug reports
-                </li>
-                <li>
-                    Maintaining the Atlassian Jira bug database
-                </li>
-                <li>
-                    Analysing test processes and developing process improvements
-                </li>
-                <li>
-                    Supervising a team of up to 30 testers
-                </li>
-                <li>
-                    Providing feedback in regards to game design and gameplay
+                <li *ngFor="let task of exp.description.tasks">
+                    {{task}}
                 </li>
             </ul>
         </li>
@@ -85,7 +16,7 @@
 </div>
 <!-- End #experience -->
 
-<div id="education">
+<div id="education" *ngIf="educationInfo.length > 0">
     <h2 class="heading">Education</h2>
     <div class="education-block">
         <h3>University of Hamburg</h3>
