--- a/homeassistantApp/src/main/res/layout/activity_login.xml
+++ b/homeassistantApp/src/main/res/layout/activity_login.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:gravity="center_horizontal"
-android:orientation="vertical"
-android:paddingBottom="@dimen/activity_vertical_margin"
-android:paddingLeft="@dimen/activity_horizontal_margin"
-android:paddingRight="@dimen/activity_horizontal_margin"
-android:paddingTop="@dimen/activity_vertical_margin"
-tools:context="net.rickiekarp.homeassistant.LoginActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="net.rickiekarp.homeassistant.LoginActivity">
 
-<!-- Login progress -->
+    <!-- Login progress -->
 
     <ProgressBar
         android:id="@+id/login_progress"
@@ -92,8 +92,8 @@ tools:context="net.rickiekarp.homeassistant.LoginActivity">
         android:layout_height="match_parent"
         android:gravity="bottom">
 
-        <EditText
-            android:id="@+id/server"
+        <Spinner
+            android:id="@+id/serverselection"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
