--- a/homeassistantApp/src/main/res/menu/activity_main_drawer.xml
+++ b/homeassistantApp/src/main/res/menu/activity_main_drawer.xml
@@ -12,7 +12,7 @@
             <item
                 android:id="@+id/nav_info"
                 android:icon="@android:drawable/ic_dialog_info"
-                android:title="Info" />
+                android:title="@string/action_info" />
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@android:drawable/ic_lock_power_off"
