Website: Remove hardcoded date in timeline

--- a/Website/WebsiteFrontend/src/app/components/about/about.component.html
+++ b/Website/WebsiteFrontend/src/app/components/about/about.component.html
@@ -2,7 +2,7 @@
     <h2 class="heading">Experience</h2>
 
     <ul class="timeline">
-        <li class="event" *ngFor="let exp of experienceInfo" data-date="December 2018 – NOW">
+        <li class="event" *ngFor="let exp of experienceInfo" data-date="">
             <h3>{{exp.name}}</h3>
             <h4>{{exp.jobTitle}}</h4>
             <p>{{exp.description.description}}</p>
