--- a/homeassistantApp/src/main/res/layout/activity_login.xml
+++ b/homeassistantApp/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="net.rickiekarp.homeassistant.LoginActivity">
+    tools:context="net.rickiekarp.homeassistant.ui.LoginActivity">
 
     <!-- Login progress -->
 
