--- a/Website/WebsiteFrontend/src/app/app.component.css
+++ b/Website/WebsiteFrontend/src/app/app.component.css
@@ -1,6 +1,15 @@
+.navbar-brand {
+    display: inline-block;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    font-size: 1.25rem;
+    line-height: inherit;
+    white-space: nowrap;
+}
+
 nav {
     background-color: #1a1c1f;
-    height: 80px;
+    height: 70px;
     width: 100%;
     list-style: none;
 }
@@ -8,7 +17,7 @@ nav {
 nav li {
     text-align: center;
     color: #FFFFFF;
-    padding: 5px;
+    padding: 0px;
 }
 
 .navbar-nav {
@@ -16,4 +25,23 @@ nav li {
     padding-left: 0;
     margin-bottom: 0;
     padding-right: 0;
+}
+
+.nav-link {
+    display: block;
+    padding: .05rem 0.1rem;
+}
+
+label {
+    display: inline-block;
+    margin: 0 0 -1px;
+    padding: 15px 25px;
+    font-weight: 600;
+    text-align: center;
+    color: #bbb;
+    border: 1px solid transparent;
+}
+
+label:hover { 
+    background-color: #111111;
 }
