--- a/Website/WebsiteFrontend/src/app/components/home/home.component.html
+++ b/Website/WebsiteFrontend/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <h1>Hi {{currentUser.firstName}}!</h1>
+    <h1>Hi {{currentUser.username}}!</h1>
     <h3>All registered users:</h3>
     <ul>
         <li *ngFor="let user of users">
-            {{user.username}} ({{user.firstName}} {{user.lastName}})
+            {{user.username}}
             - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
         </li>
     </ul>
