--- a/Website/WebsiteFrontend/src/app/components/home/home.component.html
+++ b/Website/WebsiteFrontend/src/app/components/home/home.component.html
@@ -7,4 +7,7 @@
             - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
         </li>
     </ul>
+    
+    <h3>Inline Edit Example</h3>
+    <app-edit-example></app-edit-example>
 </div>
